--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div id="app" v-cloak>
-        <button class="btn" @click="visibility">
+        <button class="btn" v-on:click="tableVisibility">
             <span v-tooltip="tooltipHide">{{ showText }}</span>
         </button>
 
-        <table v-if="isVisible"  class="table_blur">
+        <table v-if="tableIsShown"  class="table_blur">
             <caption>{{ title }}</caption>
             <tr>
               <th>#</th>
@@ -22,9 +22,9 @@
               <th>Secondname</th>
               <th>Thirdname</th>
             </tr>
-            <tr v-for="(user, index) in users" :key="user.id">
+            <tr v-for="(user, index) in users" v-bind:key="user.id">
               <td>{{ index + 1 }}</td>
-              <td><img :src="user.avatar != '' ? user.avatar : defaultAvatar" :alt="user.avatar != '' ? fullName : 'Заглушка' " /></td>
+              <td><img v-bind:src="user.avatar || defaultAvatar" v-bind:alt="fullName(user) || 'Заглушка' " /></td>
               <td>{{ user.firstName | capitalize }} <button  v-copy="user.firstName">Copy!</button></td>
               <td>{{ user.secondName | capitalize }}</td>
               <td>{{ user.thirdName | capitalize }}</td>
